# Stock-Analyst

./: README.md  pyproject.toml
src/trading_agent_v2/: __init__.py  alerting.py  charting.py  config.py  data_provider.py  indicators.py  main.py  models.py  patterns.py  scanner.py  scoring.py  strategy.py
tests/: test_scoring.py
