[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analyst-v2"
version = "0.1.0"
description = "Professional intraday scanner for Nifty 100"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.25",
  "requests>=2.31",
  "matplotlib>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
